--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,20 @@ body {
     font-family: sans-serif;
 
 }
+
+.candy-root {
+  --candy-color-background1: hsl(160 50% 10%);
+  --candy-color-background2: hsl(160 50% 20%);
+  --candy-color-background3: hsl(160 50% 17%);
+  --candy-color-background4: hsl(160 50% 14%);
+  --candy-color-text1: hsl(160 50% 90%);
+  --candy-color-text2: hsl(160 50% 70%);
+  --candy-color-border1: hsl(160 50% 45%);
+  --candy-color-border2: hsl(160 50% 26%);
+  --candy-color-border3: hsl(160 50% 22%);
+  --candy-color-accent-background1: hsl(85 80% 50%);
+  --candy-color-accent-background2: hsl(85 80% 45%);
+  --candy-color-accent-border1: hsl(85 80% 80%);
+  --candy-color-accent-text1: hsl(85 80% 5%);
+  --candy-color-shadow1: hsl(160 50% 5% / 50%);
+}
